--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "graphql-tag": "1.2.4",
     "graphql-tools": "0.10.0",
     "react": "^15.4.2",
+    "react-addons-update": "^15.4.2",
     "react-apollo": "^0.11.2",
     "react-dom": "^15.4.2",
     "subscriptions-transport-ws": "^0.5.3"
